--- a/src/main/resources/templates/supplymanagement/purchaseorderquery.html
+++ b/src/main/resources/templates/supplymanagement/purchaseorderquery.html
@@ -15,20 +15,20 @@
     <link rel="stylesheet" href="../angularjs/toaster.min.css">
     <script src="../js/jQuery/jquery-2.2.3.min.js"></script>
     <script src="../js/plugins/bootstrap/js/bootstrap.min.js"></script>
-
+    <script src="js/WdatePicker.js"></script>
 
     <script type="text/javascript">
         $(function () {
             selectByEntity();
         })
-        function selectByEntity(){
+        function selectByEntity(pageNum){
             $("#tbody").empty();
             var purchaseOrderNumber=$("#purchaseOrderNumber").val();
             var nameOfPurchaseOrder=$("#nameOfPurchaseOrder").val();
             var purchaseOrdersStatesId=$("#purchaseOrdersStatesId").val();
             var hospitalName=$("#hospitalName").val();
-            var createReceiptsTimes=$("#createReceiptsTimes").val();
-            var submissionTimes=$("#submissionTimes").val();
+            var createTime=$("#createTime").val();
+            var subTime=$("#subTime").val();
             var serialNumber=$("#serialNumber").val();
             var commonName=$("#commonName").val();
             var dosageFormId=$("#dosageFormId").val();
@@ -38,15 +38,16 @@
             var tradeName=$("#tradeName").val();
             var enterpriseNameId=$("#enterpriseNameId").val();
             var drugCategoryId=$("#drugCategoryId").val();
+            var suppliersid=$("#suppliersid").val();
             $.ajax({
-                url:"selectPurchaseOrderProcessing",
+                url:"selectPurchaseToOrder",
                 data:{
                     "purchaseOrderNumber":purchaseOrderNumber,
                     "nameOfPurchaseOrder":nameOfPurchaseOrder,
                     "purchaseOrdersStatesId":purchaseOrdersStatesId,
                     "hospitalName":hospitalName,
-                    "createReceiptsTimes":createReceiptsTimes,
-                    "submissionTimes":submissionTimes,
+                    "createTime":createTime,
+                    "subTime":subTime,
                     "serialNumber":serialNumber,
                     "commonName":commonName,
                     "dosageFormId":dosageFormId,
@@ -56,6 +57,7 @@
                     "tradeName":tradeName,
                     "enterpriseNameId":enterpriseNameId,
                     "drugCategoryId":drugCategoryId,
+                    "suppliersid":suppliersid,
                     "pageNum":pageNum
                 },
                 type:"post",
@@ -81,44 +83,60 @@
                         if(purchaseOrdersStatesId==5){
                             purchaseOrdersStatesId="到期无法供货";
                         }
-                        var date=data[i].purchaseOrder.createReceiptsTimes;
-                        var date2=data[i].purchaseOrder.submissionTimes;
+                        var date1=data[i].purchaseOrder.startTime;
+                        var date2=data[i].purchaseOrder.endTime;
+                        var date3=data[i].purchaseOrder.createReceiptsTime;
+                        var date4=data[i].purchaseOrder.submissionTime;
+                        var date5=data[i].purchaseOrder.auditTime;
                         var s2=new Date(date2);
-                        var s=new Date(date);
-                        year=s.getFullYear();
-                        month=s.getMonth()+1;
-                        day=s.getDate();
+                        var s1=new Date(date1);
+                        var s3=new Date(date3);
+                        var s4=new Date(date4);
+                        var s5=new Date(date5);
+                        year=s1.getFullYear();
+                        month=s1.getMonth()+1;
+                        day=s1.getDate();
                         time=year+'-'+getzf(month)+'-'+getzf(day);
                         year1=s2.getFullYear();
                         month1=s2.getMonth()+1;
                         day1=s2.getDate();
                         time2=year1+'-'+getzf(month1)+'-'+getzf(day1);
+                        year2=s3.getFullYear();
+                        month2=s3.getMonth()+1;
+                        day2=s3.getDate();
+                        time3=year2+'-'+getzf(month2)+'-'+getzf(day2);
+                        year3=s4.getFullYear();
+                        month3=s4.getMonth()+1;
+                        day3=s4.getDate();
+                        time4=year3+'-'+getzf(month3)+'-'+getzf(day3);
+                        year4=s5.getFullYear();
+                        month4=s5.getMonth()+1;
+                        day4=s5.getDate();
+                        time5=year4+'-'+getzf(month4)+'-'+getzf(day4);
                         v+='<tr>';
                         v+='<td>'+(i+1)+'</td>'
                         v+='<td><input type="checkbox" name="del" value='+data[i].id+'></td>';
                         v+='<td>'+data[i].purchaseOrder.purchaseOrderNumber+'</td>'
                         v+='<td>'+data[i].purchaseOrder.nameOfPurchaseOrder+'</td>'
                         v+='<td>'+data[i].hospital.hospitalName+'</td>'
+                        v+='<td>'+purchaseOrdersStatesId+'</td>'
                         v+='<td>'+time+'</td>'
                         v+='<td>'+time2+'</td>'
-                        v+='<td>'+data[i].serialNumber+'</td>'
-                        v+='<td>'+data[i].commonName+'</td>';
-                        v+='<td>'+data[i].tradeName+'</td>';
-                        v+='<td>'+data[i].durgsFrom.drugFrom+'</td>';
-                        v+='<td>'+data[i].specification+'</td>';
-                        v+='<td>'+data[i].unit+'</td>'
-                        v+='<td>'+data[i].conversionFraction+'</td>'
-                        v+='<td>'+data[i].enterprise.enterpriseName+'</td>'
-                        v+='<td>'+data[i].hospitalTransactionDetails.biddingPrice+'</td>'
-                        v+='<td>'+data[i].hospitalTransactionDetails.transactionPrice+'</td>'
-                        v+='<td>'+data[i].hospitalTransactionDetails.purchasedAmount+'</td>'
-                        v+='<td>'+data[i].hospitalTransactionDetails.purchasedMoney+'</td>'
-                        v+='<td>'+data[i].enterprise.enterpriseName+'</td>'
-                        v+='<td>'+purchaseOrdersStatesId+'</td>'
+                        v+='<td>'+time3+'</td>'
+                        v+='<td>'+time4+'</td>';
+                        v+='<td>'+time5+'</td>';
+                        v+='<td>'+data[i].hospitalTransactionDetails.purchasedAmount+'</td>';
+                        v+='<td>'+data[i].hospitalTransactionDetails.purchasedMoney+'</td>';
+                        v+='<td>'+data[i].hospitalTransactionDetails.receiptAmount+'</td>'
+                        v+='<td>'+data[i].hospitalTransactionDetails.receiptMoney+'</td>'
+                        v+='<td>'+data[i].hospitalTransactionDetails.returnsTheAmount+'</td>'
+                        v+='<td>'+data[i].hospitalTransactionDetails.returnsTheMoney+'</td>'
+                        v+='<td>'+data[i].hospitalTransactionDetails.finalSettlementAmount+'</td>'
+                        v+='<td>'+data[i].hospitalTransactionDetails.finalSettlementMoney+'</td>'
                         v+='<td><a href="#" data-target="#editModal1" data-toggle="modal" onclick="saw('+data[i].id+')">查看</a></td>'
                         v+='</tr>';
                     }
-                    // $("#tbody").append(v);
+                    $("#tbody").append(v);
                     qian=result.pageNum==1?1:result.pageNum-1;
                     hou=result.pageNum==result.pages?result.pages:result.pageNum+1;
                 }
@@ -278,7 +296,7 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">统计时间：</span>
             </td>
             <td>
-                <input class="form-control" style="width: 120px;float: left" id="createReceiptsTimes"><span style="float: left">至</span><input class="form-control" style="width: 120px;float: left" id="submissionTimes">
+                <input class="form-control" style="width: 120px;float: left" id="createTime" onclick=WdatePicker({dateFmt:'yyyy-MM-dd'})  readonly="readonly"><span style="float: left" >至</span><input class="form-control" style="width: 120px;float: left" id="subTime" onclick=WdatePicker({dateFmt:'yyyy-MM-dd'})  readonly="readonly">
             </td>
         </tr>
         <tr>
@@ -363,6 +381,7 @@
             <thead>
             <tr>
                 <th class="sorting_asc">序号</th>
+                <th class="sorting_asc"><input type="checkbox" id="boxid" onclick="setAllNo()"  style="width:25px;height:25px;" /><span style="font-weight: bold">选择</span></th>
                 <th class="sorting_asc">采购医院</th>
                 <th class="sorting_asc">采购单编号</th>
                 <th class="sorting_asc">采购单名称</th>
@@ -422,17 +441,17 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li>
-                        <a href="#" aria-label="Previous">
+                        <a href="#" aria-label="Previous" onclick="selectByEntity(qian)">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
+                    <li><a href="#" onclick="selectByEntity(1)">1</a></li>
+                    <li><a href="#" onclick="selectByEntity(2)">2</a></li>
+                    <li><a href="#" onclick="selectByEntity(3)">3</a></li>
+                    <li><a href="#" onclick="selectByEntity(4)">4</a></li>
+                    <li><a href="#" onclick="selectByEntity(5)">5</a></li>
                     <li>
-                        <a href="#" aria-label="Next">
+                        <a href="#" aria-label="Next" onclick="selectByEntity(hou)">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
